skins/larry/mail.css
/* ... */
.composeoption {
	color: #666;
	padding-right: 22px;
	white-space: nowrap;
}

#composeoptions .composeoption {
	display: inline-block;
	padding: 4px 22px 4px 0;
}

#composeoptions .composeoption:last-child {
	padding-right: 4px;
}

.mozilla .composeoption input {
	vertical-align: -3px;
}

#composeview-bottom {
	position: relative;
	width: 100%;
	height: 200px;
}

#composebodycontainer {
	position: absolute;
	top: 0;
	left: 0;
	right: 260px;
	bottom: 0;
	border-radius: 0 0 0 4px;
}

#composebodycontainer.buttons {
	bottom: 42px;
}

#composebody {
	position: absolute;
	top: 0;
	left: 0;
	bottom: 0;
	width: 99%;
	border: 0;
	border-radius: 0 0 0 4px;
	padding: 8px 0 8px 8px;
	resize: none;
	font-family: monospace;
	font-size: 9pt;
	outline: none;
	box-shadow: inset 0 0 2px 1px rgba(0,0,0, 0.2);
	-webkit-box-shadow: inset 0 0 2px 1px rgba(0,0,0, 0.2);
}

#composebody:active,
#composebody:focus {
	box-shadow: inset 0 0 3px 2px rgba(71,135,177, 0.9);
	-webkit-box-shadow: inset 0 0 3px 2px rgba(71,135,177, 0.9);
}

#compose-attachments {
	position: absolute;
	right: 0;
	top: 1px;
	bottom: 0;
	width: 240px;
	background: #f0f0f0;
	border-style: solid;
	border-color: #f0f0f0 #f0f0f0 #f0f0f0 #ddd;
	border-width: 1px;
	padding: 8px;
	overflow: auto;
}

#compose-attachments.droptarget {
	background-image: url(images/filedrop.png);
	background-position: center bottom;
	background-repeat: no-repeat;
}

#compose-attachments.droptarget.hover,
#compose-attachments.droptarget.active {
	border-color: #019bc6;
	box-shadow: 0 0 3px 2px rgba(71,135,177, 0.5);
	-webkit-box-shadow: 0 0 3px 2px rgba(71,135,177, 0.5);
}

#compose-attachments.droptarget.hover {
	background-color: #d9ecf4;
	box-shadow: 0 0 5px 2px rgba(71,135,177, 0.9);
	-webkit-box-shadow: 0 0 5px 2px rgba(71,135,177, 0.9);
}

#composeview-bottom .formbuttons.floating {
	position: absolute;
	width: auto;
	right: 260px;
	z-index: 200;
	padding-bottom: 8px;
}

#composebodycontainer .mce-tinymce {
	border: 0 !important;
	margin-top: 1px;
}

#composebodycontainer .mce-panel {
	border-color: #ccc !important;
	background: #f0f0f0;
}

#composebody_toolbargroup {
	border-bottom: 1px solid #ddd;
}

#uploadform a.iconlink {
	margin-left: 1em;
	text-indent: -5000px;
}

#uploadform form div {
	margin: 4px 0;
}

